fix Kenneth title alignment

--- a/src/theme/scss/components/_person-component.scss
+++ b/src/theme/scss/components/_person-component.scss
@@ -78,7 +78,7 @@
     }
 
     &--advisor {
-      min-width: 110px;
+      max-width: 110px;
       .gatsby-image-wrapper{
         width: 107px;
       }
